PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.1.10

- Core:
  . Fixed --CGI-- support of run-tests.php. (cmb)

04 Aug 2022, PHP 8.1.9

- CLI:
  . Fixed potential overflow for the builtin server via the PHP_CLI_SERVER_WORKERS
    environment variable. (yiyuaner)

- Core:
  . Fixed bug GH-8923 (error_log on Windows can hold the file write lock). (cmb)
  . Fixed bug GH-8995 (WeakMap object reference offset causing TypeError).
    (Tobias Bachert)

- CLI:
  . Fixed GH-8952 (Intentionally closing std handles no longer possible).
    (Arnaud, cmb)

- Date:
  . Fixed bug #80047 (DatePeriod doesn't warn with custom DateTimeImmutable).
    (Derick)

- FPM:
  . Fixed zlog message prepend, free on incorrect address. (Heiko Weber)
  . Fixed possible double free on configuration loading failure. (Heiko Weber).

- GD:
  . Fixed bug GH-8848 (imagecopyresized() error refers to the wrong argument).
    (cmb)

- Intl:
  . Fixed build for ICU 69.x and onwards. (David Carlier)

- OPcache:
  . Fixed bug GH-8847 (PHP hanging infinitly at 100% cpu when check php
    syntaxe of a valid file). (Dmitry)
  . Fixed bug GH-8030 (Segfault with JIT and large match/switch statements).
    (Arnaud)

- Reflection:
  . Fixed bug GH-8943 (Fixed Reflection::getModifiersNames() with readonly
    modifier). (Pierrick)

- Standard:
  . Fixed the crypt_sha256/512 api build with clang > 12. (David Carlier)
  . Uses CCRandomGenerateBytes instead of arc4random_buf on macOs. (David Carlier).
  . Fixed bug GH-9017 (php_stream_sock_open_from_socket could return NULL).
    (Heiko Weber)

07 Jul 2022, PHP 8.1.8

- Core:
  . Fixed bug GH-8338 (Intel CET is disabled unintentionally). (Chen, Hu)
  . Fixed leak in Enum::from/tryFrom for internal enums when using JIT (ilutov)
  . Fixed calling internal methods with a static return type from
    extension code. (Sara)